# pretty-console

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: advanced.rs  demo.rs
src/: lib.rs
src/snapshots/: pretty_console__tests__basic_colors.snap  pretty_console__tests__complex_styling.snap  pretty_console__tests__reusable_style.snap  pretty_console__tests__rgb_colors.snap  pretty_console__tests__style_combinations.snap
