[package]
name = "pretty-console"
version = "1.0.0"
edition = "2024"

[dependencies]
[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[features]
no-color= []

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml", "glob"] }
