[package]
name = "pretty-console"
version = "1.0.0"
edition = "2024"
description = "A fluent, zero-cost API for styling terminal text with colors and attributes"
repository = "https://github.com/elcoosp/pretty-console"
readme = "README.md"
license = "MIT"
keywords = ["color", "style", "ansi", "console", "formatting"]
categories = ["text-processing"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[features]
no-color= []

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml", "glob"] }
